# sleeplog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/glad/: glad.c  glad.h
libs/imgui_markdown/: imgui_markdown.h
src/: main.cc
src/core/: article.cc  article.hh  dream_kind.hh  entry.cc  entry.hh  journal.cc  journal.hh
src/gui/: menu.hh  menu_window.cc  menu_window.hh  viewer.cc  viewer.hh  viewer_window.cc  viewer_window.hh  window.hh
src/utils/: md_utils.cc  md_utils.hh  piece_table.cc  piece_table.hh
tests/: CMakeLists.txt  tests_core.cc
